--- a/main.html
+++ b/main.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<!-- the entire body must be written by the student -->
+	<div id="song">
+	<P>My current favorite song name is <a target="_blank" href="https://www.youtube.com/watch?v=Rif-RTvmmss">starboy</a></P>
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
